- Use libusb20_strerror() function instead of custom usb_error() one. - Rename "aux.[ch]" to "util.[ch]" which is a more common name for utility functions and allows checkout on some non-FreeBSD systems where the "aux.*" namespace is reserved. - Fix some compile warnings while at it.

PR:		usb/183728
MFC after:	2 weeks